--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html{
 
 body {
     font-family: 'Poppins', sans-serif;
+    transition: 0.5s ease;
 }
 
 .container {
@@ -136,7 +137,7 @@ section:nth-child(odd){
         right: 16px;
         font-size: 20px;
         cursor: pointer;
-        transition: 0.5s ease;
+        transition: 1s ease;
 
     }
 
@@ -156,5 +157,10 @@ section:nth-child(odd){
     }
     .nav_footer .logo2 h1{
         margin-right: 20px;
+    }
+    .body{
+        margin: 20px;
+        box-shadow: 0px 0px 10px 10px #cfcfcf;
+        transition: 0.5s ease;
     }
 }
